k8s/overlays/dev/version-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitwise-export
spec:
  selector:
    matchLabels:
      app: splitwise-export
  template:
    metadata:
      labels:
        app: splitwise-export
    spec:
      containers:
        - name: web
